# Presentations

./: .clang-format  .gitignore  CMakeLists.txt  CanvasView_8hpp_source.html  CodeEditor_8hpp_source.html  CodeParser_8hpp_source.html  CodeThemeConfig_8hpp_source.html  Doxyfile  ElementRenderer_8hpp_source.html  MainWindow_8hpp_source.html  ParsedElement_8hpp_source.html  PresentationManager_8hpp_source.html  ShortcutManager_8hpp_source.html  ShortcutRequest_8hpp_source.html  SlidePreviewDelegate_8hpp_source.html  SlidePreviewListView_8hpp_source.html  SlideWidget_8hpp_source.html  SpecialCharacters_8hpp_source.html  ThemeManager_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classpresentations_1_1CanvasView-members.html  classpresentations_1_1CanvasView.html  classpresentations_1_1CanvasView.js  classpresentations_1_1CodeEditor-members.html  classpresentations_1_1CodeEditor.html  classpresentations_1_1CodeEditor.js  classpresentations_1_1CodeParser-members.html  classpresentations_1_1CodeParser.html  classpresentations_1_1CodeParser.js  classpresentations_1_1CodeThemeConfig-members.html  classpresentations_1_1CodeThemeConfig.html  classpresentations_1_1CodeThemeConfig.js  classpresentations_1_1ElementRenderer-members.html  classpresentations_1_1ElementRenderer.html  classpresentations_1_1MainWindow-members.html  classpresentations_1_1MainWindow.html  classpresentations_1_1MainWindow.js  classpresentations_1_1PresentationManager-members.html  (+34 more)
.github/workflows/: build-ubuntu.yml  clang-format.yml  doxygen.yml
include/presentations/: CanvasView.hpp  CodeEditor.hpp  CodeParser.hpp  CodeThemeConfig.hpp  ElementRenderer.hpp  MainWindow.hpp  ParsedElement.hpp  PresentationManager.hpp  ShortcutManager.hpp  ShortcutRequest.hpp  SlidePreviewDelegate.hpp  SlidePreviewListView.hpp  SlideWidget.hpp  SpecialCharacters.hpp  ThemeManager.hpp
resources/: codeEditorDefaults.json  resources.qrc  themes.json
resources/themes/: themes.json  themes.qrc
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_a.js  functions_c.js  functions_d.js  searchdata.js
src/: CanvasView.cpp  CodeEditor.cpp  CodeParser.cpp  CodeThemeConfig.cpp  ElementRenderer.cpp  MainWindow.cpp  MainWindow.ui  PresentationManager.cpp  ShortcutManager.cpp  SlidePreviewDelegate.cpp  SlidePreviewListView.cpp  SlideWidget.cpp  SpecialCharacters.cpp  ThemeManager.cpp  main.cpp  presentation.md
